syntax = "proto3";

package pb;

message RoomOption {
	bool visible = 1;
	bool watchable = 2;

	bool with_number = 7;
	uint32 search_group = 8;
	uint32 client_deadline = 9;
	uint32 max_players = 10;

	bytes public_properties = 13;
	bytes private_properties = 14;

	bool debug = 15;
}
